src/test/ui/borrowck/borrowck-move-out-of-vec-tail.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-move-out-of-vec-tail.rs:30:33
   |
LL |                 &[Foo { string: a },
   |                                 ^ cannot move out of borrowed content

error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-move-out-of-vec-tail.rs:34:33
   |
LL |                   Foo { string: b }] => {
   |                                 ^ cannot move out of borrowed content

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
